--- a/main.html
+++ b/main.html
@@ -11,6 +11,31 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<h1>maldives</h1>
+	<br>
+	<p>Is Traveller declaration required for Maldives?
+     All travellers are required to submit the Traveller Declaration
+	 within 96 hours to the flight time, during arrival and departure.
+	All travellers are required to submit the Traveller Declaration within
+	96 hours to the flight time, during arrival and departure to and from the Maldives.
+	</p>
+	<ol>
+		<li><b>Malé Atoll</b></li>
+		<li>pristine beaches</li>
+		<li>sprawling greenery</li>
+		<li><i></i>vibrant culture</i></li>
+		<li>Maafushi</li>
+	</ol>
+	<ul>
+		<li>Tuna, one of the essential ingredients in many dishes.</li>
+		<li>Different curries of the Maldives and parotha.</li>
+		<li><b>Masroshi, Maldivian savory snacks.</b></li>
+		<li>Bonda (bondi) from Minicoy, India.</li>
+		<li>Mas huni with chapati (roshi)</li>
+	</ul>
+
+	
+
 </body>
 
 </html>
