--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 		<li><b>Malé Atoll</b></li>
 		<li>pristine beaches</li>
 		<li>sprawling greenery</li>
-		<li><i></i>vibrant culture</i></li>
+		<li><i>vibrant culture</i></li>
 		<li>Maafushi</li>
 	</ol>
 	<ul>
